# CempaNetcdf2Postgis

./: .flake8  .gitignore  LICENSE  Makefile  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  settings.toml
.github/workflows/: checkandpreprocessor.yml  codeql-analysis.yml  pylint.yml
APP/: cli.py
APP/cempa/: config.py  functions.py  hash.py  model.py  netcdf2postgis.py
src/: cli.py  grads.py  install.py  map.py  teste.map
src/cempa/: config.py  db.py  dowloads.py  functions.py  hash.py  model.py  netCDFtoTIFF.py  netcdf2postgis.py
src/cempa/util/: color.py
src/cirrus/: db.py  dowloads.py  functions.py  model.py  netCDFtoTIFF.py  netcdf2postgis.py
src/cirrus/util/: config.py  db.py  functions.py  hash.py
src/generatmap/: map.py
src/generatmap/templates/: cempa.map
src/metadata/: points_go.csv
