[tool.black]
line-length = 80

[tool.isort]
line_length = 81


[tool.poetry]
name = "cirrus"
version = "2.1.0"
description = ""
authors = ["Rocha, Jairo <devjairomr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.10"
pandas = "^1.4.0"
numpy = "^1.22.1"
click = "^8.0.3"
dynaconf = "^3.1.7"
SQLAlchemy = "^1.4.31"
loguru = "^0.5.3"
GeoAlchemy2 = "^0.10.2"
psycopg2 = "^2.9.3"
seaborn = "^0.11.2"
Jinja2 = "^3.0.3"
xarray = "^0.21.1"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
xgrads = "^0.1.82"

[tool.poetry.dev-dependencies]  
ipython = "^8.0.1"
prospector = "^1.6.0"
blue = "^0.7.0"
pytest = "^7.0.1"
isort = "^5.10.1"
pip-audit = "^1.1.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
